// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/Input/DatePicker/Single DatePickerErrorA11y play-test 1`] = `
<form novalidate
      id="_r_ID_"
>
  <fieldset data-slot="field-set"
            class="flex flex-col has-[&gt;[data-slot=checkbox-group]]:gap-3 has-[&gt;[data-slot=radio-group]]:gap-3 border-0 p-0 m-0 gap-0"
  >
    <div class="grid gap-4 space-y-4 w-80">
      <div role="group"
           data-slot="field"
           data-orientation="vertical"
           class="group/field flex w-full gap-3 data-[invalid=true]:text-destructive flex-col [&amp;&gt;*]:w-full [&amp;&gt;.sr-only]:w-auto"
      >
        <div data-slot="form-item"
             class="flex flex-col gap-2"
        >
          <label data-slot="form-label"
                 class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive after:content-[&quot;*&quot;] after:text-destructive"
                 data-error="true"
                 for="_r_ID_-form-item"
          >
            Date of Birth
          </label>
          <div class="relative">
            <button data-slot="popover-trigger"
                    class="inline-flex items-center gap-1.5 whitespace-nowrap rounded-md text-sm transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background hover:bg-accent dark:bg-input/30 dark:border-input dark:hover:bg-input/50 hover:text-accent-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 group w-full justify-between font-normal shadow-xs text-muted-foreground"
                    id="_r_ID_-form-item"
                    type="button"
                    aria-haspopup="dialog"
                    aria-expanded="false"
                    data-state="closed"
                    aria-invalid="true"
                    aria-describedby="_r_ID_-form-item-message"
            >
              <span class="truncate text-muted-foreground">
                Pick a date
              </span>
              <svg xmlns="http://www.w3.org/2000/svg"
                   width="24"
                   height="24"
                   viewbox="0 0 24 24"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="2"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                   class="lucide lucide-calendar text-muted-foreground/80 group-hover:text-foreground shrink-0 transition-colors"
                   aria-hidden="true"
              >
                <path d="M8 2v4">
                </path>
                <path d="M16 2v4">
                </path>
                <rect width="18"
                      height="18"
                      x="3"
                      y="4"
                      rx="2"
                >
                </rect>
                <path d="M3 10h18">
                </path>
              </svg>
            </button>
          </div>
          <p data-slot="form-message"
             id="_r_ID_-form-item-message"
             role="alert"
             class="text-destructive text-xs"
          >
            Date is required
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`Components/Input/DatePicker/Single Default smoke-test 1`] = `
<div class="container mx-auto px-4 py-10">
  <div role="group"
       data-slot="field"
       data-orientation="vertical"
       class="group/field flex w-full gap-3 data-[invalid=true]:text-destructive flex-col [&amp;&gt;*]:w-full [&amp;&gt;.sr-only]:w-auto"
  >
    <label data-slot="label"
           class="flex items-center text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 after:content-['*'] after:text-destructive gap-0.5"
           for="_r_ID_"
    >
      Date of Birth
    </label>
    <div class="relative">
      <button data-slot="popover-trigger"
              class="inline-flex items-center gap-1.5 whitespace-nowrap rounded-md text-sm transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background hover:bg-accent dark:bg-input/30 dark:border-input dark:hover:bg-input/50 hover:text-accent-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 group w-full justify-between font-normal shadow-xs text-muted-foreground"
              id="_r_ID_"
              type="button"
              aria-haspopup="dialog"
              aria-expanded="false"
              data-state="closed"
      >
        <span class="truncate text-muted-foreground">
          Pick a date
        </span>
        <svg xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="lucide lucide-calendar text-muted-foreground/80 group-hover:text-foreground shrink-0 transition-colors"
             aria-hidden="true"
        >
          <path d="M8 2v4">
          </path>
          <path d="M16 2v4">
          </path>
          <rect width="18"
                height="18"
                x="3"
                y="4"
                rx="2"
          >
          </rect>
          <path d="M3 10h18">
          </path>
        </svg>
      </button>
    </div>
    <p data-slot="field-description"
       class="text-muted-foreground text-sm leading-normal font-normal group-has-data-[orientation=horizontal]/field:text-balance last:mt-0 nth-last-2:-mt-1 [[data-variant=legend]+&amp;]:-mt-1.5 [&amp;&gt;a:hover]:text-primary [&amp;&gt;a]:underline [&amp;&gt;a]:underline-offset-4"
       id="_r_ID_-helper"
    >
      Select your date of birth
    </p>
  </div>
  <p class="text-xs text-center">
    Debug | Selected Date:
  </p>
</div>
`;

exports[`Components/Input/DatePicker/Single WithForm smoke-test 1`] = `
<form class="space-y-4 max-w-md p-4">
  <div role="group"
       data-slot="field"
       data-orientation="vertical"
       class="group/field flex w-full gap-3 data-[invalid=true]:text-destructive flex-col [&amp;&gt;*]:w-full [&amp;&gt;.sr-only]:w-auto"
  >
    <div data-slot="form-item"
         class="flex flex-col gap-2"
    >
      <label data-slot="form-label"
             class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive after:content-[&quot;*&quot;] after:text-destructive"
             data-error="false"
             for="_r_ID_-form-item"
      >
        Booking Date
      </label>
      <div class="relative">
        <button data-slot="popover-trigger"
                class="inline-flex items-center gap-1.5 whitespace-nowrap rounded-md text-sm transition-[color,box-shadow] disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background hover:bg-accent dark:bg-input/30 dark:border-input dark:hover:bg-input/50 hover:text-accent-foreground h-9 px-2.5 has-data-[icon=inline-end]:pr-2 has-data-[icon=inline-start]:pl-2 group w-full justify-between font-normal shadow-xs text-muted-foreground"
                id="_r_ID_-form-item"
                type="button"
                aria-haspopup="dialog"
                aria-expanded="false"
                data-state="closed"
        >
          <span class="truncate text-muted-foreground">
            Pick a date
          </span>
          <svg xmlns="http://www.w3.org/2000/svg"
               width="24"
               height="24"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="lucide lucide-calendar text-muted-foreground/80 group-hover:text-foreground shrink-0 transition-colors"
               aria-hidden="true"
          >
            <path d="M8 2v4">
            </path>
            <path d="M16 2v4">
            </path>
            <rect width="18"
                  height="18"
                  x="3"
                  y="4"
                  rx="2"
            >
            </rect>
            <path d="M3 10h18">
            </path>
          </svg>
        </button>
      </div>
      <p data-slot="form-description"
         id="_r_ID_-form-item-description"
         class="text-muted-foreground text-sm"
      >
        Pick a range
      </p>
    </div>
  </div>
  <button type="submit"
          class="bg-primary text-white px-4 py-2 rounded-md"
  >
    Submit
  </button>
</form>
`;
